// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 1`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T08:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/New_York"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 2`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T11:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Los_Angeles"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Pacific / 11:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Pacific / 11:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 3`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T10:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Denver"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Mountain / 10:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Mountain / 10:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 4`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T09:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Chicago"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Central / 9:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Central / 9:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 5`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T08:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Indiana/Indianapolis"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 6`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T10:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Boise"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Mountain / 10:30 AM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Mountain / 10:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 7`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T12:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/New_York"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 8`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T15:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Los_Angeles"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Pacific / 3:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Pacific / 3:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 9`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T14:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Denver"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Mountain / 2:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Mountain / 2:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 10`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T13:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Chicago"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Central / 1:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Central / 1:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 11`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T12:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Indiana/Indianapolis"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 12`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2025-01-01T14:30:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Boise"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Mountain / 2:30 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Mountain / 2:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 13`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2001-01-01T20:25:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:25",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/New_York"
>
  <ReadOnly
    label="Hearing Time"
    text="8:25 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 14`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2001-01-01T23:25:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:25",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Los_Angeles"
>
  <ReadOnly
    label="Hearing Time"
    text="8:25 PM Pacific / 11:25 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Pacific / 11:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 15`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2001-01-01T22:25:00-05:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:25",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Denver"
>
  <ReadOnly
    label="Hearing Time"
    text="8:25 PM Mountain / 10:25 PM Eastern"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Mountain / 10:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 16`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Central / 9:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 17`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 18`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Mountain / 10:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;
